Trying to fix padding on firefox

--- a/public/material.css
+++ b/public/material.css
@@ -238,7 +238,7 @@ main#content {
 }
 
 div#chat-log {
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 form#compose .mdl-grid {
